--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
+            "name": "Launch API",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/api/main.go",
+            "env": {
+                "CGO_ENABLED": 1
+            }
+        },
+        {
+            "name": "Launch Aggregator",
             "type": "go",
             "request": "launch",
             "mode": "auto",
