--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "auto",
             "program": "${workspaceFolder}/api/main.go",
             "env": {
-                "CGO_ENABLED": 1
+                "CGO_ENABLED": "1"
             }
         },
         {
